# augenblick

./: .gitignore  Cargo.toml  Cross.toml  README.md  shell.nix
.github/: ci.toml
.github/workflows/: build-release.yml  pr-validation.yml  release-on-merge.yml  update-packages.yml
scripts/: fetch-rebase.sh  setup-branch-protection.sh
src/: config.rs  main.rs
src/backend/: mod.rs  wayland.rs  x11.rs
