[package]
name = "augenblick"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Fullscreen eye-blink overlay for X11 and Wayland"
repository = "https://github.com/x71c9/augenblick"
authors = ["x71c9 <mail@x71c9.com>"]

[package.metadata.release]
push = true
publish = true
tag-message = "chore(release): v{{version}}"
pre-release-commit-message = "chore(release): release v{{version}}"

[dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-client = "0.31"
